--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@biesbjerg/ngx-translate-extract": "^2.3.2",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@ng-bootstrap/ng-bootstrap": "6",
-    "@ngx-translate/core": "^10.0.2",
+    "@ngx-translate/core": "11",
     "bootstrap": "4.1.3",
     "codelyzer": "^4.0.1",
     "material-design-icons": "^3.0.1",
