--- a/package.json
+++ b/package.json
@@ -13,31 +13,31 @@
     "@ng-bootstrap/ng-bootstrap": "2.2.2",
     "@ngx-translate/core": "^10.0.2",
     "bootstrap": "4.1.3",
-    "material-design-icons": "^3.0.1",
-    "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "material-design-icons": "^3.0.1"
   },
   "devDependencies": {
-    "@angular/animations": "^7.2.16",
-    "@angular/common": "^7.2.16",
-    "@angular/compiler": "^7.2.16",
-    "@angular/core": "^7.2.16",
-    "@angular/forms": "^7.2.16",
-    "@angular/http": "^7.2.16",
-    "@angular/platform-browser": "^7.2.16",
-    "@angular/platform-browser-dynamic": "^7.2.16",
-    "@angular/router": "^7.2.16",
+    "@angular/animations": "^9.1.13",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/forms": "^9.1.13",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/router": "^9.1.13",
     "@biesbjerg/ngx-translate-extract": "^2.3.2",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@ng-bootstrap/ng-bootstrap": "6",
-    "@ngx-translate/core": "11",
+    "@ngx-translate/core": "12",
     "bootstrap": "4.1.3",
     "codelyzer": "^4.0.1",
     "material-design-icons": "^3.0.1",
-    "ngx-clipboard": "^11.1.9",
-    "rxjs": "~6.3.3",
+    "ngx-clipboard": "13",
+    "rxjs": "~6.6.7",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.10.3"
+  },
+  "dependencies": {
+    "@angular-devkit/schematics": "^12.1.1"
   }
 }
