--- a/package.json
+++ b/package.json
@@ -11,33 +11,31 @@
   "peerDependencies": {
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@ng-bootstrap/ng-bootstrap": "2.2.2",
-    "@ngx-translate/core": "^10.0.2",
-    "bootstrap": "4.1.3",
+    "@ngx-translate/core": "^13.0.0",
+    "bootstrap": "^5.0.2",
     "material-design-icons": "^3.0.1"
   },
   "devDependencies": {
-    "@angular/animations": "^9.1.13",
-    "@angular/common": "^9.1.13",
-    "@angular/compiler": "^9.1.13",
-    "@angular/core": "^9.1.13",
-    "@angular/forms": "^9.1.13",
-    "@angular/platform-browser": "^9.1.13",
-    "@angular/platform-browser-dynamic": "^9.1.13",
-    "@angular/router": "^9.1.13",
-    "@biesbjerg/ngx-translate-extract": "^2.3.2",
+    "@angular/animations": "^12.1.1",
+    "@angular/common": "^12.1.1",
+    "@angular/compiler": "^12.1.1",
+    "@angular/core": "^12.1.1",
+    "@angular/forms": "^12.1.1",
+    "@angular/platform-browser": "^12.1.1",
+    "@angular/platform-browser-dynamic": "^12.1.1",
+    "@angular/router": "^12.1.1",
+    "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
-    "@ng-bootstrap/ng-bootstrap": "6",
-    "@ngx-translate/core": "12",
-    "bootstrap": "4.1.3",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ngx-translate/core": "^13.0.0",
+    "bootstrap": "^5.0.2",
     "codelyzer": "^4.0.1",
     "material-design-icons": "^3.0.1",
-    "ngx-clipboard": "13",
+    "ngx-clipboard": "^14.0.1",
     "rxjs": "~6.6.7",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2",
-    "zone.js": "~0.10.3"
+    "typescript": "~4.2.3",
+    "zone.js": "~0.11.4"
   },
-  "dependencies": {
-    "@angular-devkit/schematics": "^12.1.1"
-  }
+  "dependencies": {}
 }
