--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^12.1.1",
     "@angular/platform-browser-dynamic": "^12.1.1",
     "@angular/router": "^12.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@ngx-translate/core": "^13.0.0",
